syntax = "proto3";

package typ_query;
option go_package = "gitlab.com/mippo.app/typ-query.git/go/pb/typ_query";



import "typ_query/leveler.proto";
import "typ_query/keyword.proto";

// SIMPLE: only keyword(only one table)
// ADVANCE: queries (multiple tables)

message Query {
  string  search_type = 1;
  string  target_type = 2;
  oneof  value_of {
    Keyword keyword = 3;
    Queries queries = 4;
  }

  repeated Leveler levels = 5;
}


message Queries {
  string operant = 1;
  repeated Query queries = 2;
}